refactor(nitrite): apply IntelliJ suggested cleanups across Nitrite module
Simplify conditional expressions, remove redundant code, and apply style
improvements suggested by IntelliJ across all Nitrite runtime classes.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>